# libvmod-lambda

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: build-deb.yml  test.yml
example-vcl/: backend.vcl  default.vcl  direct-invoke.vcl
src/: aws_client.rs  aws_client_pool.rs  implementation.rs  lib.rs
tests/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc  test07.vtc  test08.vtc  test09.vtc  test10.vtc  test12.vtc  test13.vtc
