[package]
name = "vmod_lambda"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
cdylib-plugin = "0.1"
varnish = { version = "0.5.5", features = ["ffi"] }
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.104.0"
aws-types = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.1"
anyhow = "1.0"

[build-dependencies]
cdylib-plugin = "0.1"
