[package]
name = "vmod_lambda"
description = "A Varnish VMOD for invoking AWS Lambda functions from VCL"
version = "0.4.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
cdylib-plugin = "0.1"
varnish = { version = "0.5.5", features = ["ffi"] }
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.104.0"
aws-types = "1.3.3"
aws-credential-types = "1.2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.1"
anyhow = "1.0"
url = "2.5"
base64 = "0.22"

[build-dependencies]
cdylib-plugin = "0.1"

[package.metadata.deb]
name = "vmod-lambda"
maintainer = "Michael Nutt <michael@nuttnet.net>"
provides = "vmod-lambda"
conflicts = "vmod-lambda"
section = "web"
priority = "optional"
assets = [
    ["target/release/libvmod_lambda.so", "usr/lib/varnish/vmods/", "644"],
]
extended-description = """
A Varnish VMOD for invoking AWS Lambda functions from VCL.
This VMOD allows Varnish to invoke AWS Lambda functions with high throughput
and thousands of concurrent invocations.
"""

[package.metadata.deb.variants.varnish77]
name = "vmod-lambda-varnish77"
depends = "varnish (>= 7.7.0), varnish (<< 8.0.0)"

[package.metadata.deb.variants.varnish80]
name = "vmod-lambda-varnish80"
depends = "varnish (>= 8.0.0), varnish (<< 8.1.0)"
